[package]
name = "adjustp"
version = "0.1.5"
edition = "2021"
description = "A crate to handle different p-value adjustments"
license = "MIT"
documentation = "https://docs.rs/adjustp"
repository = "https://github.com/noamteyssier/adjustp"
keywords = ["statistics"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.19"
